--- a/MATH318FinalProject.Rmd
+++ b/MATH318FinalProject.Rmd
@@ -3,9 +3,7 @@ title: "MATH 318 Final Project"
 output: html_notebook
 ---
 
-# MATH 318 Final Project
-
-# Effect of World Cup on Stock Price and Trading Activity
+# MATH 318 Final Project: The Effect of World Cup on Stock Price and Trading Activity
 
 ```{r}
 library(tidyverse)
@@ -15,6 +13,8 @@ library(lubridate)
 library(stringr)
 ```
 
+# Load Data
+
 ```{r}
 spydata = as_tibble(read.csv("1_min_SPY_2008-2021.csv"))
 ```
@@ -23,33 +23,16 @@ spydata = as_tibble(read.csv("1_min_SPY_2008-2021.csv"))
 worldcupmatches = as_tibble(read.csv("WorldCupMatches.csv"))
 ```
 
-```{r}
-spydata
-```
+# Helper Functions
 
 ```{r}
-spydata$date = as.POSIXct(spydata$date, format="%Y%m%d %H:%M:%S")
-spydata
-```
-
-```{r}
-#Remove Rows containing NA's
-cleaned_worldcupmatches = unique(worldcupmatches[!apply(is.na(worldcupmatches) | worldcupmatches == "", 1, all),])
-#Convert Date and Time into POSIX EDT 
-cleaned_worldcupmatches$Datetime = as.POSIXct(cleaned_worldcupmatches$Datetime, format = "%e %b %Y - %R") - 60* 60
-cleaned_worldcupmatches
-```
-
-```{r}
-worldcupmatches2014 = filter(cleaned_worldcupmatches, Year == 2014)
-worldcupmatches2014
-```
-
-```{r}
-startingdate = min(worldcupmatches2014$Datetime)
-spyafterworldcup = filter(spydata,  date >= startingdate)
-out <-spyafterworldcup[order(spyafterworldcup$date),]
-out
+hasSpyDataWithinRangeOfGame = function(spydata, game_dates, range){
+  list = c()
+  for(game_date in 1:length(game_dates)){
+    list = append(list, nrow(getSpyDataWithinRangeofGame(spydata, game_date = game_dates[game_date], range)) != 0)
+  }
+  return(list)
+}
 ```
 
 ```{r}
@@ -100,14 +83,46 @@ getSpyAndGameDataForOneGame = function(spydata,worldcup, game_index, range){
 }
 ```
 
+# Cleaning Data
+
 ```{r}
-getSpyAndGameDataForOneGame(spydata, worldcupmatches2014,2,3)
+#Update 
+spydata$date = as.POSIXct(spydata$date, format="%Y%m%d %H:%M:%S")
+
+#Remove Rows containing NA's
+cleaned_worldcupmatches = unique(worldcupmatches[!apply(is.na(worldcupmatches) | worldcupmatches == "", 1, all),])
+
+#Convert Date and Time into POSIX EDT 
+cleaned_worldcupmatches$Datetime = as.POSIXct(cleaned_worldcupmatches$Datetime, format = "%e %b %Y - %R") - 60 * 60
+
+#Filter Games on the Weekend
+cleaned_worldcupmatches = filter(cleaned_worldcupmatches, wday(as.Date(Datetime)) != 7 & wday(as.Date(Datetime)) != 1)
+
+#Filter Games that have no corresponding Data
+cleaned_worldcupmatches = add_column(cleaned_worldcupmatches,"HasSpyData" = hasSpyDataWithinRangeOfGame(spydata, cleaned_worldcupmatches$Datetime, 5))
+cleaned_worldcupmatches = filter(cleaned_worldcupmatches, cleaned_worldcupmatches$HasSpyData == TRUE)
 ```
 
 ```{r}
-getSpyAndGameDataWithinWorldcup(worldcupmatches2014, spydata, 3)
+cleaned_worldcupmatches
+```
+
+# Sample Games from a World Cup
+
+```{r}
+samplesize = 10
+worldcupmatches2014 = filter(cleaned_worldcupmatches, Year == 2014)
+sampleworldcupgames = sample_n(worldcupmatches2014,size = samplesize)
+print(sampleworldcupgames)
 ```
 
 ```{r}
-getSpyDatawithinRangeofGame(spydata, worldcupmatches2014$Datetime[3], 3)
+getSpyAndGameDataForOneGame(spydata, sampleworldcupgames, 1, 3)
+```
+
+```{r}
+
+for(rowIndx in 1:samplesize){
+  print(getSpyAndGameDataForOneGame(spydata, sampleworldcupgames, rowIndx, 3))
+}
 ```
